parser/src/test/resources/corpus/invalid/13_description_missing_colon.ff
rule "Description Missing Colon" {
  description "no colon between label and value"
}
